# real-time-person-detection-factory

./: .env  .gitignore  README.md  pyproject.toml
src/: classes.py  main.py  video.py
