[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Guilherme Sampaio <guilhermefs09@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
opencv-python = "^4.10.0.84"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
